--- a/css/styles.css
+++ b/css/styles.css
@@ -2,32 +2,11 @@ body {
   font-family: "Roboto", sans-serif;
   color: #434455;
   background-color: #fff;
-  
-  *color: #434455;
-  font-size: 16px;
-  font-weight: 400;
-  letter-spacing: 0.02em;
-  line-height: 1.5;
-  font-style: normal;
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;*
 }
 
 a {
   text-decoration: none;
-  *font-family: inherit;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);*
-
 }
-
-*a:hover {
-  color: #404bbf;
-}*
-
-*main {
-  flex-grow: 1;
-}*
 
 h1,
 h2,
@@ -41,16 +20,13 @@ p {
 
 ul,
 ol {
-  list-style: none;
   list-style-type: none;
-  
-  *padding-left: 0;*
+  margin: 0;
+  padding: 0;
 }
 
 p {
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
+  margin: 0;
 }
 
 img {
@@ -71,20 +47,19 @@ button {
 @media only screen and (min-width: 1158px) {
   .section {
     background-color: #ffffff;
-  padding: 120px 0 120px;
+    padding: 120px 0 120px;
   }
 }
 
 .container {
-   min-width: 320px;
- 
+  min-width: 320px;
   padding: 0 16px;
   margin: 0 auto;
 }
 
 @media screen and (min-width: 768px) {
   .container {
-    width: 736px;
+    max-width: 768px;
   }
 }
 
@@ -92,21 +67,20 @@ button {
   .container {
     max-width: 1158px;
     padding: 0 15px;
-   
   }
 }
 
 .visually-hidden {
   position: absolute;
+  white-space: nowrap;
   width: 1px;
   height: 1px;
-  margin: -1px;
+  overflow: hidden;
   border: 0;
   padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
   clip: rect(0 0 0 0);
-  overflow: hidden;
+  clip-path: inset(100%);
+  margin: -1px;
 }
 
 /* header */
@@ -118,8 +92,9 @@ button {
 }
 
 .header-container {
-display: flex;
+  display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .nav-list,
@@ -139,7 +114,7 @@ display: flex;
 
 .header-logo {
   padding: 16px 0;
-  margin-right: auto;
+  display: block;
 }
 @media only screen and (min-width: 768px) {
   .header-logo {
@@ -222,7 +197,6 @@ display: flex;
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: #434455;
-
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
@@ -427,31 +401,22 @@ display: flex;
 
 /* #region Our advantages */
 
-.our-advantage-title {
-  font-size: 56px;
-  line-height: 1.07;
-  text-align: center;
-  color: #ffffff;
-  letter-spacing: 0.02em;
-}
-
 @media only screen and (min-width: 768px) {
   .advantages-list {
     display: flex;
-        flex-wrap: wrap;
-        gap: 72px 24px;
+    row-gap: 72px;
+    column-gap: 24px;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
 
 @media only screen and (min-width: 1158px) {
   .advantages-list {
- 
-    
-
-        row-gap: 72px;
-        column-gap: 24px;
-        flex-wrap: wrap;
-        justify-content: center;
+    row-gap: 72px;
+    column-gap: 24px;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
 .advantages-item {
@@ -464,14 +429,13 @@ display: flex;
 @media only screen and (min-width: 768px) {
   .advantages-item {
     margin-bottom: 0;
-  
+    max-width: 356px;
   }
 }
 
 @media only screen and (min-width: 1158px) {
   .advantages-item {
-    background-color: #ffffff;
-  width: calc((100% - 72px) / 4);
+    max-width: 264px;
   }
 }
 @media only screen and (min-width: 1158px) {
@@ -525,16 +489,16 @@ display: flex;
 }
 
 @media only screen and (min-width: 1158px) {
-.section-title {
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  text-align: left;
-  color: #2e2f42;
-  margin-bottom: 8px;
-}
+  .section-title {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: #2e2f42;
+    margin-bottom: 8px;
   }
+}
 
 .advantage-text {
   font-weight: 500;
@@ -542,12 +506,12 @@ display: flex;
 
 @media only screen and (min-width: 1158px) {
   .advantage-text {
-      font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-  text-align: left;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
+    text-align: left;
   }
 }
 
@@ -557,21 +521,20 @@ display: flex;
 
 .our-team-section {
   background-color: #f4f4fd;
-  
 }
-@media only screen and (min-width: 1158px) {
- .our-team-section {
+/* @media only screen and (min-width: 1158px) {
+  .our-team-section {
     padding: 120px 0;
   }
-}
+} */
 .our-team-title {
-    font-weight: 700;
+  margin-bottom: 72px;
   font-size: 36px;
   line-height: 1.11;
+  letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
-  margin-bottom: 72px;
 }
 
 .our-team-list {
@@ -583,11 +546,11 @@ display: flex;
 
 @media only screen and (min-width: 768px) {
   .our-team-list {
-           flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        row-gap: 64px;
-        column-gap: 24px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    row-gap: 64px;
+    column-gap: 24px;
   }
 }
 .our-team-container {
@@ -642,21 +605,15 @@ display: flex;
 }
 /* #endregion */
 /* #region Our Portfolio */
-@media only screen and (min-width: 1158px) {
-.portfolio{
-          padding-top: 120px;
-        padding-bottom: 120px;
-}
-}
+
 .portfolio-title {
-    font-weight: 700;
+  margin-bottom: 72px;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
-  text-transform: capitalize;
   color: #2e2f42;
-  margin-bottom: 72px;
+  text-transform: capitalize;
 }
 
 @media only screen and (min-width: 768px) {
@@ -669,8 +626,7 @@ display: flex;
 
 @media only screen and (min-width: 1158px) {
   .portfolio-list {
-  row-gap: 48px;
-  column-gap: 24px;
+    row-gap: 48px;
   }
 }
 .portfolio-item {
@@ -693,12 +649,12 @@ display: flex;
 
 @media only screen and (min-width: 1158px) {
   .portfolio-item {
-  width: calc((100% - 48px) / 3);
-  cursor: pointer;
-  overflow: hidden;
-  transition-property: box-shadow;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    width: calc((100% - 48px) / 3);
+    cursor: pointer;
+    overflow: hidden;
+    transition-property: box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
 .portfolio-wrapper {
@@ -710,64 +666,67 @@ display: flex;
   width: 100%;
   height: auto;
   display: block;
-} 
+}
 
 .overlay-text {
+  color: #f4f4fd;
   position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: 40px 32px;
   top: 0;
   left: 0;
+  transform: translateY(100%);
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #f4f4fd;
-  padding: 40px 32px;
-  background-color: #4d5ae5;
-  height: 100%;
-  width: 100%;
-  transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: #4d5ae5;
 }
 
-
-
+.portfolio-item:hover .overlay-text {
+  transform: translateY(0%);
+}
 .portfolio-container {
   padding: 32px 16px;
   border-bottom: 1px solid #e7e9fc;
   border-left: 1px solid #e7e9fc;
   border-right: 1px solid #e7e9fc;
 }
-
+.section-title-text {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
 /* #endregion */
 
 /* #region Footer */
 .footer {
-
   background-color: #2e2f42;
-  color: #ffffff;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding: 96px 0;
 }
 
 @media only screen and (min-width: 1158px) {
   .footer {
-  padding: 100px 0;
+    padding: 100px 0;
   }
 }
 
 @media only screen and (min-width: 768px) {
   .footer-container {
-    flex-direction: row;
+    display: flex;
     flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: flex-start;
+    align-items: baseline;
+    padding: 0 108px;
   }
 }
 
 @media only screen and (min-width: 1158px) {
   .footer-container {
     flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: flex-start;
+    padding: 0 16px;
   }
 }
 
@@ -790,19 +749,14 @@ display: flex;
 }
 
 .footer-logo {
-  display: inline-block;
+  display: block;
+  text-align: center;
   margin-bottom: 16px;
-  display: inline-block;
-  position: relative;
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 @media only screen and (min-width: 768px) {
   .footer-logo {
-    position: relative;
-    left: 0;
-    transform: translateX(0);
+    display: inline-block;
   }
 }
 
@@ -816,7 +770,7 @@ display: flex;
 }
 
 .footer-links {
-  align-items: center;
+  text-align: center;
   margin-bottom: 72px;
 }
 
@@ -835,8 +789,6 @@ display: flex;
 
 .footer-subtitle {
   font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
   color: #fff;
   margin-bottom: 16px;
 }
@@ -863,7 +815,6 @@ display: flex;
 }
 .social-icon {
   fill: #f4f4fd;
- 
 }
 .footer-link {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
