--- a/css/styles.css
+++ b/css/styles.css
@@ -855,7 +855,7 @@ button {
 @media only screen and (min-width: 768px) {
   .form-subscribe {
     flex-direction: row;
-    gap: 16px 24px;
+    gap: 24px;
   }
 }
 
