--- a/css/styles.css
+++ b/css/styles.css
@@ -372,8 +372,9 @@ button {
   }
 }
 .advantages-item {
-  margin-bottom: 72px;
   max-width: 288px;
+  margin: 0 auto;
+  margin-bottom: 72px;
 }
 .advantages-item :last-child {
   margin-bottom: 0;
@@ -583,12 +584,10 @@ button {
 }
 .portfolio-item {
   background: #fff;
+  max-width: 288px;
+  margin: 0 auto;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-/* .portfolio-item:not(:last-child) {
-  margin-bottom: 48px;
-} */
 
 @media only screen and (min-width: 768px) {
   .portfolio-item {
@@ -715,6 +714,7 @@ button {
 .footer-text {
   width: 264px;
   color: #f4f4fd;
+  margin: 0 auto;
 }
 
 .logo-part {
